--- a/style.css
+++ b/style.css
@@ -2,22 +2,338 @@
 *::after,
 *::before {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 body {
-  font-family: Google Sans;
+  font-family: "Google Sans", sans-serif;
   font-weight: 400;
+}
+
+a {
+  text-decoration: none;
+  color: #868686;
 }
 
 header {
   color: #868686;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 20px;
+  box-shadow: 0px 2px 10px rgb(0 0 0 / 25%);
+  position: sticky;
+  top: 0;
+  background-color: #ffffff;
+  z-index: 100;
 }
 
-header_logo {
+.logo {
   font-size: 22px;
+  display: flex;
+  align-items: center;
+  gap: 10px;
 }
 
-header_links {
+.links {
+  font-size: 17px;
+}
+
+.links ul {
+  display: flex;
+  list-style: none;
+  gap: 40px;
+}
+
+/* Home */
+
+#home {
+  margin: 0 50px;
+  text-align: center;
+}
+
+.main-heading {
+  width: -webkit-fill-available;
+  max-width: 800px;
+  margin-top: 70px;
+  position: relative;
+}
+
+.main-heading-wrapper::after {
+  content: '';
+  display: block;
+  position: absolute;
+  top: 10%;
+  right: 200px;
+  width: 577px; 
+  height: 219px;
+  background-image: url(img/airplane.png);
+
+}
+
+.rcoem-name {
+  color: #646464;
   font-size: 25px;
+  font-weight: 700;
+  margin: 10px 0;
 }
 
+.hero-img {
+  margin: 10px 40px;
+  width: -webkit-fill-available;
+  max-width: 800px;
+}
+
+.gdsc-decription {
+  color: #5F5F5F;
+  font-size: 30px;
+  font-weight: 400;
+  max-width: 800px;
+  margin: 20px auto;
+}
+
+.btn {
+  display: inline-block;
+  padding: 10px 20px;
+  background-color: #3686F7;
+  color: #ffffff;
+  font-size: 17px;
+  font-weight: 500;
+  border-radius: 6px;
+  margin: 30px auto;
+  border: none;
+  cursor: pointer;
+}
+
+.t-chevrons {
+  display: block;
+  margin: 30px auto;
+}
+
+.get-to-know {
+  color: #5F5F5F;
+  font-size: 38px;
+  font-weight: 700;
+}
+
+/* Abour */
+
+#about {
+  text-align: center;
+}
+
+.about-container {
+  margin: 30px 0;
+}
+.underline-heading {
+  color: #5F5F5F;
+  font-size: 30px;
+  font-weight: 500;
+  margin: 40px 0;
+}
+
+.underline-heading::after {
+  content: '';
+  display: block;
+  width: 100px;
+  height: 3px;
+  background-color: #000;
+  margin: 10px auto;
+}
+
+.description-with-img {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 0 50px;
+  text-align: right;
+}
+
+.description-with-img.right {
+  flex-direction: row-reverse;
+  text-align: left;
+}
+
+.description-with-img p {
+  width: 40%;
+  color: #5F5F5F;
+  font-family: "Product Sans", "Medium", sans-serif;
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 1.5;
+  position: relative;
+}
+
+.description-with-img p::after {
+  content: '';
+  position: absolute;
+  height: 100%;
+  width: 7px;
+  right: -14px;
+  top: 0;
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
+  background-color: #000;
+}
+
+.description-with-img.right p::after {
+  left: -14px;
+  right: unset;
+  border-top-right-radius: 0px;
+  border-bottom-right-radius: 0px;
+  
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
+}
+
+.description-with-img img {
+  height: 300px;
+}
+
+/* Technologies */
+#technologies {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+  text-align: center;
+  margin: 30px 0;
+}
+
+#technologies .heading {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  color: #5F5F5F;
+}
+
+#technologies .heading p {
+  font-weight: 500;
+  font-size: 18px;
+}
+
+.line-heading {
+  font-size: 45px;
+  font-weight: 700;
+  display: flex;
+  align-items: center;
+  justify-self: center;
+  gap: 20px;
+}
+
+.line-heading::after,
+.line-heading::before {
+  content: '';
+  display: block;
+  top: 50%;
+  width: 200px;
+  height: 3px;
+  background-color: #FF6060;
+}
+
+.techonlogy-area {
+  display: flex;
+  overflow: auto;
+}
+
+.techonlogy-area > img {
+  height: 200px;
+}
+
+
+/* FAQ */
+#faq {
+  display: flex;
+  flex-direction: column;
+  gap: 100px;
+  margin: 20px 25%;
+}
+
+.plain-heading {
+  color: #5F5F5F;
+  font-size: 45px;
+  text-align: center;
+  font-weight: 700;
+}
+
+.accordion-wrapper {
+  color: #5F5F5F;
+  font-weight: medium;
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+}
+
+.accordion-head {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 40px;
+  padding: 10px 40px;
+  font-size: 22px;
+  font-weight: 500;
+  background-color: #ffffff;
+  position: relative;
+  border-radius: 100vh;
+  
+}
+
+.accordion-head::before {
+  content: '';
+  position: absolute;
+  inset: -10px;
+  background-color: #E1E1E1;
+  z-index: -1;
+  border-radius: 100vh;
+}
+
+
+.accordion-body {
+  --radius-size: 20px;
+  margin: 0 50px;
+  border-top-right-radius: calc(var(--radius-size) - 5px);
+  border-bottom-right-radius: calc(var(--radius-size) - 5px);
+  padding: 5px 10px 5px 25px;
+  position: relative;
+  line-height: 1.5;
+  background-color: #ffffff;
+  font-size: 17px;
+}
+
+.accordion-body::before {
+  content: '';
+  position: absolute;
+  inset: -15px;
+  left: -24px;
+  background-color: #E1E1E1;
+  z-index: -1;
+  border-radius: 7px;
+  border-top-right-radius: var(--radius-size);
+  border-bottom-right-radius: var(--radius-size);
+}
+
+.accordion-body::after {
+  content: '';
+  position: absolute;
+  left: -24px;
+  top: -15px;
+  bottom: -15px;
+  width: 12px;
+  border-top-left-radius: var(--radius-size);
+  border-bottom-left-radius: var(--radius-size);
+  background-color: #000000;
+}
+
+.accent-red::after {
+  background-color: #DB4437 !important;
+}
+.accent-green::after {
+  background-color: #0F9D56 !important;
+}
+.accent-blue::after {
+  background-color: #4285F4 !important;
+}
+.accent-yellow::after {
+  background-color: #F4B400 !important;
+}
